--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 target/
+pom.xml.*
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -9,3 +10,11 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.classpath
+.externalToolBuilders/
+.project
+.settings/
+.vscode/
+test.mv.db
+test.trace.db
+.idea/
