update pom file with lombok

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>${jaxb.impl.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.26</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
