enabled basic auth, changes for broadcast

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
-
+### Quarkus properties ###
 quarkus.http.port=8000
+quarkus.log.level=INFO
+quarkus.swagger-ui.path=swagger
 
+### Quarkus database properties ###
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=quarkus
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.sql-load-script=import.sql
-quarkus.swagger-ui.path=swagger
+quarkus.hibernate-orm.log.sql=false
 
 %test.quarkus.datasource.jdbc.url=jdbc:h2:./test
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:./dev
-# quarkus.http.auth.basic=true
+
+### Quarkus security properties ###
+quarkus.security.jdbc.enabled=true
+quarkus.security.jdbc.principal-query.sql=SELECT u.password, u.role FROM users u WHERE u.username=?
+quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true 
+quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1
+quarkus.security.jdbc.principal-query.attribute-mappings.0.index=2
+quarkus.security.jdbc.principal-query.attribute-mappings.0.to=groups
