--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <quarkus.platform.version>2.13.3.Final</quarkus.platform.version>
         <mapstruct.version>1.5.2.Final</mapstruct.version>
         <jacoco.version>0.8.8</jacoco.version>
+        <lombok.version>1.18.26</lombok.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
         <!-- automatically run annotation processors within the incremental compilation -->
@@ -88,6 +89,16 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-openapi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-elytron-security-jdbc</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -112,6 +123,11 @@
 
                 <configuration>
                     <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
