--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=false
 
 %test.quarkus.datasource.jdbc.url=jdbc:h2:./test
+%test.quarkus.hibernate-orm.sql-load-script=no-file
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:./dev
+%dev.quarkus.hibernate-orm.sql-load-script=import.sql
 
 ### Quarkus security properties ###
 quarkus.security.jdbc.enabled=true
