--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ quarkus.hibernate-orm.log.sql=false
 %test.quarkus.datasource.jdbc.url=jdbc:h2:./test
 %test.quarkus.hibernate-orm.sql-load-script=no-file
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:./dev
-%dev.quarkus.hibernate-orm.sql-load-script=import.sql
+%dev.quarkus.hibernate-orm.sql-load-script=import-extended.sql
 
 ### Quarkus security properties ###
 quarkus.security.jdbc.enabled=true
