Added broadcast now func + return message with bad request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 ### Quarkus properties ###
 quarkus.http.port=8000
 quarkus.log.level=INFO
-quarkus.swagger-ui.path=swagger
 
 ### Quarkus database properties ###
 quarkus.datasource.db-kind=h2
@@ -21,3 +20,11 @@ quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true
 quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1
 quarkus.security.jdbc.principal-query.attribute-mappings.0.index=2
 quarkus.security.jdbc.principal-query.attribute-mappings.0.to=groups
+
+
+### Quarkus Swagger properties ###
+quarkus.swagger-ui.path=swagger
+quarkus.smallrye-openapi.info-title=Radio API
+%dev.quarkus.smallrye-openapi.info-title=Radio API (dev)
+%test.quarkus.smallrye-openapi.info-title=Radio API (test)
+quarkus.smallrye-openapi.info-version=2.0.0
