gr.aueb.broadcast domain

--- a/broadcast-service/pom.xml
+++ b/broadcast-service/pom.xml
@@ -122,6 +122,20 @@
             <version>1.18.26</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>gr.aueb</groupId>
+            <artifactId>content</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
