--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -122,6 +122,10 @@
             <version>1.18.26</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-elytron-security-jdbc</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
