--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -15,3 +15,12 @@ quarkus.hibernate-orm.validate-in-dev-mode=true
 quarkus.log.category."org.hibernate.tool.schema".level=TRACE
 
 quarkus.log.level=INFO
+
+
+%dev.user.host=localhost
+user.host=user-api
+
+%dev.user.port=8080
+user.port=8080
+
+quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
