Add calls in other microservices

--- a/broadcast-service/src/main/resources/application.properties
+++ b/broadcast-service/src/main/resources/application.properties
@@ -15,3 +15,19 @@ quarkus.hibernate-orm.validate-in-dev-mode=true
 quarkus.log.category."org.hibernate.tool.schema".level=TRACE
 
 quarkus.log.level=INFO
+
+%dev.user.host=localhost
+user.host=user-api
+
+%dev.user.port=8080
+user.port=8080
+
+quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
+
+%dev.content.host=localhost
+v.host=user-api
+
+%dev.content.port=8081
+content.port=8081
+
+quarkus.rest-client.content-api.url=http://${content.host}:${content.port}
