--- a/broadcast-service/src/main/resources/application.properties
+++ b/broadcast-service/src/main/resources/application.properties
@@ -25,7 +25,7 @@ user.port=8080
 quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
 
 %dev.content.host=localhost
-v.host=user-api
+content.host=content-api
 
 %dev.content.port=8081
 content.port=8081
