Add openapi dependency and properties

--- a/broadcast-service/src/main/resources/application.properties
+++ b/broadcast-service/src/main/resources/application.properties
@@ -31,3 +31,10 @@ content.host=content-api
 content.port=8081
 
 quarkus.rest-client.content-api.url=http://${content.host}:${content.port}
+
+### Quarkus Swagger properties ###
+quarkus.swagger-ui.path=swagger
+quarkus.smallrye-openapi.info-title=Broadcast API
+%dev.quarkus.smallrye-openapi.info-title=Broadcast API (dev)
+%test.quarkus.smallrye-openapi.info-title=Broadcast API (test)
+quarkus.smallrye-openapi.info-version=2.0.0
