--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -24,3 +24,11 @@ user.host=user-api
 user.port=8080
 
 quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
+
+
+### Quarkus Swagger properties ###
+quarkus.swagger-ui.path=swagger
+quarkus.smallrye-openapi.info-title=Content API
+%dev.quarkus.smallrye-openapi.info-title=Content API (dev)
+%test.quarkus.smallrye-openapi.info-title=Content API (test)
+quarkus.smallrye-openapi.info-version=2.0.0
