--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -24,3 +24,10 @@ quarkus.security.jdbc.principal-query.clear-password-mapper.enabled=true
 quarkus.security.jdbc.principal-query.clear-password-mapper.password-index=1
 quarkus.security.jdbc.principal-query.attribute-mappings.0.index=2
 quarkus.security.jdbc.principal-query.attribute-mappings.0.to=groups
+
+### Quarkus Swagger properties ###
+quarkus.swagger-ui.path=swagger
+quarkus.smallrye-openapi.info-title=User API
+%dev.quarkus.smallrye-openapi.info-title=User API (dev)
+%test.quarkus.smallrye-openapi.info-title=User API (test)
+quarkus.smallrye-openapi.info-version=2.0.0
