Add properties for reaching broadcast service

--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -25,6 +25,14 @@ user.port=8080
 
 quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
 
+%dev.broadcast.host=localhost
+broadcast.host=user-api
+
+%dev.broadcast.port=8082
+broadcast.port=8082
+
+quarkus.rest-client.broadcast-api.url=http://${broadcast.host}:${broadcast.port}
+
 
 ### Quarkus Swagger properties ###
 quarkus.swagger-ui.path=swagger
