--- a/broadcast-service/pom.xml
+++ b/broadcast-service/pom.xml
@@ -92,6 +92,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-health</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-metrics</artifactId>
+        </dependency>
         <!-- Maven dependencies for OpenTelemetry support -->
         <dependency>
             <groupId>io.quarkus</groupId>
