gia emena na paizoun

--- a/broadcast-service/src/main/resources/application.properties
+++ b/broadcast-service/src/main/resources/application.properties
@@ -46,3 +46,8 @@ quarkus.datasource.jdbc.telemetry=true
 ### quarkus.otel.exporter.otlp.traces.endpoint=http://localhost:4318
 quarkus.log.console.format=%d{HH:mm:ss.SSS} [%t] %-5p [%c{2.}] traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} - %s%n%e
 quarkus.http.access-log.pattern="%h %l %u [%{%d/%b/%Y:%H:%M:%S %z}t] \"%r\" %s %b \"%{Referer}i\" \"%{User-Agent}i\" traceId=%{X,traceId} spanId=%{X,spanId}"
+
+quarkus.container-image.name=broadcast-service
+quarkus.container-image.tag=1.0
+
+### quarkus.container-image.build=true
