--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -52,3 +52,5 @@ quarkus.http.access-log.pattern="%h %l %u [%{%d/%b/%Y:%H:%M:%S %z}t] \"%r\" %s %
 
 quarkus.container-image.name=content-service
 quarkus.container-image.tag=1.0
+
+### quarkus.container-image.build=true
