--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -44,3 +44,6 @@ quarkus.http.access-log.pattern="%h %l %u [%{%d/%b/%Y:%H:%M:%S %z}t] \"%r\" %s %
 
 quarkus.container-image.name=user
 quarkus.container-image.tag=1.0
+
+### quarkus.container-image.build=true
+
