Add prod host and port

--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -18,18 +18,18 @@ quarkus.log.level=INFO
 
 
 %dev.user.host=localhost
-user.host=user-api
+%prod.user.host=localhost
 
 %dev.user.port=8080
-user.port=8080
+%prod.user.port=8080
 
 quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
 
 %dev.broadcast.host=localhost
-broadcast.host=user-api
+%prod.broadcast.host=localhost
 
 %dev.broadcast.port=8082
-broadcast.port=8082
+%prod.broadcast.port=8082
 
 quarkus.rest-client.broadcast-api.url=http://${broadcast.host}:${broadcast.port}
 
