--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ quarkus.log.level=INFO
 
 
 %dev.user.host=localhost
-%prod.user.host=localhost
+%prod.user.host=user-service
 
 %dev.user.port=8080
 %prod.user.port=8080
@@ -26,7 +26,7 @@ quarkus.log.level=INFO
 quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
 
 %dev.broadcast.host=localhost
-%prod.broadcast.host=localhost
+%prod.broadcast.host=broadcast-service
 
 %dev.broadcast.port=8082
 %prod.broadcast.port=8082
