--- a/broadcast-service/src/main/resources/application.properties
+++ b/broadcast-service/src/main/resources/application.properties
@@ -17,7 +17,7 @@ quarkus.log.category."org.hibernate.tool.schema".level=TRACE
 quarkus.log.level=INFO
 
 %dev.user.host=localhost
-user.host=user-api
+user.host=user-service
 
 %dev.user.port=8080
 user.port=8080
@@ -25,7 +25,7 @@ user.port=8080
 quarkus.rest-client.user-api.url=http://${user.host}:${user.port}
 
 %dev.content.host=localhost
-content.host=content-api
+content.host=content-service
 
 %dev.content.port=8081
 content.port=8081
