--- a/broadcast-service/src/main/resources/application.properties
+++ b/broadcast-service/src/main/resources/application.properties
@@ -43,7 +43,7 @@ quarkus.smallrye-openapi.info-version=2.0.0
 quarkus.application.name=broadcast-service
 quarkus.otel.enabled=true
 quarkus.datasource.jdbc.telemetry=true  
-### quarkus.otel.exporter.otlp.traces.endpoint=http://localhost:4318
+quarkus.otel.exporter.otlp.traces.endpoint=http://jaeger:4317
 quarkus.log.console.format=%d{HH:mm:ss.SSS} [%t] %-5p [%c{2.}] traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} - %s%n%e
 quarkus.http.access-log.pattern="%h %l %u [%{%d/%b/%Y:%H:%M:%S %z}t] \"%r\" %s %b \"%{Referer}i\" \"%{User-Agent}i\" traceId=%{X,traceId} spanId=%{X,spanId}"
 
